# pyvid

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
pyvdo/: __main__.py  playlist.py
pyvid/: __init__.py
pyvid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
