[metadata]
name = pyvid
version = 0.0.1
author = Zul Ikram Musaddik Rayat
author_email = dev.rayat000@gmail.com
description = Downloads youtube playlist videos at highest resolution.
long_description = file: README.md
long_description_content_type = text/markdown
url = GITHUB REPOSITORY LINK
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True